--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -151,4 +151,7 @@
   <data name="icons8_play_96_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-play-96_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="songNameBox" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\songNameBox.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
